--- a/html/index.html
+++ b/html/index.html
@@ -1,110 +1,144 @@
 <html>
-<head>
-        <title>ВПО-205</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="/css/style.css">
-</head>
+  <head>
+    <title>ВПО-205</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  </head>
 
-<body class="Face-p">
-
+  <body class="Face-p">
     <div class="Face-p__head-line"></div>
     <div class="Face-p__head">
-        <a href="#"><img class="Face-p__logo_img" src="/Pict/logo.png"/></a> <! Лого -->
+      <a href="#"><img class="Face-p__logo_img" src="../Pict/logo.png" /></a>
+      <!-- Лого -->
 
-        <div class="Face-p__search"> <! Поиск -->
-                <div class="Face-p_search__input">
-                    <input type="text" class="b-input b-input_search" placeholder=""> 
-                </div>
-                <div class="Face-p_search__input">
-                    <div class="Search-button">Поиск</div>  <! Кнопка поиск -->
-                </div>
+      <div class="Face-p__search">
+        <!-- Поиск -->
+        <div class="Face-p_search__input">
+          <input type="text" class="b-input b-input_search" placeholder="" />
         </div>
+        <div class="Face-p_search__input">
+          <div class="Search-button">Поиск</div>
+          <!-- Кнопка поиск -->
+        </div>
+      </div>
     </div>
 
-    <div class="Face-p__table"> <! Таблица ссылок на страницы -->
-            <div class="Face-p-table__menu">
-                <a href="#" class='b-link_menu b-link_menu_active' >HOME</a>
-                <a href="#" class='b-link_menu'>О НАС</a>
-                <a href="#" class='b-link_menu'>СЕРВИС</a>
-                <a href="#" class='b-link_menu'>ПАРТНЕРЫ</a>
-                <a href="#" class='b-link_menu'>КЛИЕНТАМ</a>
-                <a href="#" class='b-link_menu'>ПРОДУКЦИЯ</a>
-                <a href="#" class='b-link_menu'>ВАКАНСИИ</a>
-                <a href="#" class='b-link_menu'>КОНТАКТЫ</a>
-            </div>
+    <div class="Face-p__table">
+      <!-- Таблица ссылок на страницы -->
+      <div class="Face-p-table__menu">
+        <a href="#" class="b-link_menu b-link_menu_active">HOME</a>
+        <a href="#" class="b-link_menu">О НАС</a>
+        <a href="#" class="b-link_menu">СЕРВИС</a>
+        <a href="#" class="b-link_menu">ПАРТНЕРЫ</a>
+        <a href="#" class="b-link_menu">КЛИЕНТАМ</a>
+        <a href="#" class="b-link_menu">ПРОДУКЦИЯ</a>
+        <a href="#" class="b-link_menu">ВАКАНСИИ</a>
+        <a href="#" class="b-link_menu">КОНТАКТЫ</a>
+      </div>
     </div>
 
     <div class="Face-p__VPO205">
-        <img class="Face-p-VPO205__img" src="/Pict/VPO205.jpg"/></a>
+      <img class="Face-p-VPO205__img" src="../Pict/VPO205.jpg" />
+    </div>
+    <section class="section section--left-img">
+      <div class="section__wrapper">
+        <div class="section__img">
+          <img class="Face-p-text-box-img__pict" src="../pict/box/1.jpg" />
+        </div>
+        <div class="section__text">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores
+            optio a ullam ut. Suscipit aperiam maxime explicabo aut voluptatem?
+            Harum alias iste odio quam nesciunt quos possimus illo, voluptas
+            culpa!
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section section--right-img">
+      <div class="section__wrapper">
+        <div class="section__img">
+          <img class="Face-p-text-box-img__pict" src="../pict/box/1.jpg" />
+        </div>
+      </div>
+      <div class="section__text">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores
+          optio a ullam ut. Suscipit aperiam maxime explicabo aut voluptatem?
+          Harum alias iste odio quam nesciunt quos possimus illo, voluptas
+          culpa!
+        </p>
+      </div>
+    </section>
+    <div class="Face-p__text-box text-box">
+      <div class="text-box__mid-line Face-p__top-mid-line"></div>
+      <div class="text-box__img-wrapper  text-box__img--left Face-p-text-box__img-left">
+        <img class="text-box__img Face-p-text-box-img__pict" src="../pict/box/1.jpg" />
+      </div>
+      <div class="text-box__text text-box__text--right Face-p-text-box__text-right1">
+        Карабин Вепрь-12 “Молот” (ВПО-205) представляют собой гладкоствольный
+        самозарядный карабин входящий в семейство карабинов Вепрь. Как и все
+        карабины семейства, Вепрь-12 (ВПО-205) разработан и производится на
+        Вятско-Полянском машиностроительном заводе «Молот». Конструкция карабина
+        основана на надежной и проверенной временем конструкции ручного пулемета
+        Калашникова. Карабин Вепрь-12 (ВПО-205) предназначен для самообороны,
+        для занятия спортивной стрельбой, как служебное оружие для охранных и
+        силовых структур.
+      </div>
     </div>
 
-        <div class="Face-p__text-box">
-            <div class="Face-p__top-mid-line"></div>
-            <div class="Face-p-text-box__img-left">
-                <img class="Face-p-text-box-img__pict" src="/pict/box/1.jpg"/></a>    
-            </div>
-            <div class="Face-p-text-box__text-right1">
-                Карабин Вепрь-12 “Молот” (ВПО-205) представляют собой гладкоствольный самозарядный карабин 
-                входящий в семейство карабинов Вепрь. Как и все карабины семейства, Вепрь-12 (ВПО-205) 
-                разработан и производится на Вятско-Полянском машиностроительном заводе «Молот». 
-                Конструкция карабина основана на надежной и проверенной временем конструкции ручного 
-                пулемета Калашникова. Карабин Вепрь-12 (ВПО-205) предназначен для самообороны, для занятия 
-                спортивной стрельбой, как служебное оружие для охранных и силовых структур.
-            </div>
-        </div>
-    
-        <div class="Face-p__text-box">
-            <div class="Face-p__top-mid-line"></div>
-            <div class="Face-p-text-box__img-right">
-                <img class="Face-p-text-box-img__pict" src="/pict/box/2.jpg"/></a>    
-            </div>
-            <div class="Face-p-text-box__text-left1">
-                Карабин выпускается под патрон 12×76 и обладает высокой степенью 
-                надежности и безотказности при работе в различных условиях эксплуатации.
-            </div>
-        </div>
-    
-        <div class="Face-p__text-box">
-            <div class="Face-p__top-mid-line"></div>
-            <div class="Face-p-text-box__img-left">
-                <img class="Face-p-text-box-img__pict" src="/pict/box/3.jpg"/></a>    
-            </div>
-            <div class="Face-p-text-box__text-right2">
-                Карабин снабжается магазинами на 4, 5, 8 и 10 патронов в калибрах 12/65, 12/70 или 12/76.
-            </div>
-        </div>
+    <div class="Face-p__text-box">
+      <div class="Face-p__top-mid-line"></div>
+      <div class="Face-p-text-box__img-right">
+        <img class="Face-p-text-box-img__pict" src="../pict/box/2.jpg" />
+      </div>
+      <div class="Face-p-text-box__text-left1">
+        Карабин выпускается под патрон 12×76 и обладает высокой степенью
+        надежности и безотказности при работе в различных условиях эксплуатации.
+      </div>
+    </div>
 
-        <div class="Face-p__text-box">
-            <div class="Face-p__top-mid-line"></div>
-            <div class="Face-p-text-box__img-right">
-                <img class="Face-p-text-box-img__pict" src="/pict/box/4.jpg"/></a>    
-            </div>
-            <div class="Face-p-text-box__text-left1">
-                Крышка ствольной коробки карабина Вепрь-12 (ВПО-205) не отделяется, 
-                а откидывается вверх-вперед, как у автомата АКС-74У. На крышке 
-                ствольной коробки имеется направляющая типа “Пикатинни”, позволяющая 
-                установить оптический или коллиматорный прицел.
-            </div>
-        </div>
+    <div class="Face-p__text-box">
+      <div class="Face-p__top-mid-line"></div>
+      <div class="Face-p-text-box__img-left">
+        <img class="Face-p-text-box-img__pict" src="../pict/box/3.jpg" />
+      </div>
+      <div class="Face-p-text-box__text-right2">
+        Карабин снабжается магазинами на 4, 5, 8 и 10 патронов в калибрах 12/65,
+        12/70 или 12/76.
+      </div>
+    </div>
 
-        <div class="Face-p__text-box">
-            <div class="Face-p__top-mid-line"></div>
-            <div class="Face-p-text-box__img-left">
-                <img class="Face-p-text-box-img__pict" src="/pict/box/5.jpg"/></a>    
-            </div>
-            <div class="Face-p-text-box__text-right3">
-                Карабин имеет резьбу на дульном срезе, что позволяет устанавливать различные дульные
-                устройства, такие как: сменные чоки, пламегасители, дульные тормозы компенсаторы.
-            </div>
-            <div class="Face-p__bot-mid-line"></div> 
-        </div>
+    <div class="Face-p__text-box">
+      <div class="Face-p__top-mid-line"></div>
+      <div class="Face-p-text-box__img-right">
+        <img class="Face-p-text-box-img__pict" src="../pict/box/4.jpg" />
+      </div>
+      <div class="Face-p-text-box__text-left1">
+        Крышка ствольной коробки карабина Вепрь-12 (ВПО-205) не отделяется, а
+        откидывается вверх-вперед, как у автомата АКС-74У. На крышке ствольной
+        коробки имеется направляющая типа “Пикатинни”, позволяющая установить
+        оптический или коллиматорный прицел.
+      </div>
+    </div>
 
-        <div class="Face-p__footer">
-                <a href="#"><img class="Face-p-logo-img__footer" src="/Pict/logo.png"/></a>
-        </div>
+    <div class="Face-p__text-box">
+      <div class="Face-p__top-mid-line"></div>
+      <div class="Face-p-text-box__img-left">
+        <img class="Face-p-text-box-img__pict" src="../pict/box/5.jpg" />
+      </div>
+      <div class="Face-p-text-box__text-right3">
+        Карабин имеет резьбу на дульном срезе, что позволяет устанавливать
+        различные дульные устройства, такие как: сменные чоки, пламегасители,
+        дульные тормозы компенсаторы.
+      </div>
+      <div class="Face-p__bot-mid-line"></div>
+    </div>
 
-
-
-</body>
-
+    <div class="Face-p__footer">
+      <a href="#"
+        ><img class="Face-p-logo-img__footer" src="../Pict/logo.png"
+      /></a>
+    </div>
+  </body>
 </html>
